--- a/src/Autofac.Multitenant/Autofac.Multitenant.csproj
+++ b/src/Autofac.Multitenant/Autofac.Multitenant.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Autofac extension for multitenant application support.</Description>
     <VersionPrefix>5.0.0</VersionPrefix>
-    <TargetFrameworks>net451;netstandard1.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0;netstandard2.1;</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Autofac.Multitenant</AssemblyName>
@@ -32,8 +32,12 @@
     <Product>Autofac</Product>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461' or '$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="1.1.0-preview1.19504.10" />
+  </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="5.0.0-ResolvedSe-00585" />
+    <PackageReference Include="Autofac" Version="5.0.0-develop-00622" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.6.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
