--- a/test/Autofac.Multitenant.Test/Autofac.Multitenant.Test.csproj
+++ b/test/Autofac.Multitenant.Test/Autofac.Multitenant.Test.csproj
@@ -27,6 +27,8 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="coverlet.msbuild" Version="2.9.0" />
   </ItemGroup>
 
   <ItemGroup>
